prject 1 is completed

--- a/DOM projects/project 1/index.html
+++ b/DOM projects/project 1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 1</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
@@ -12,15 +13,15 @@
     </nav>
     <div class="canvas">
       <h1>Color Scheme Switcher</h1>
-      <span class="button" id="grey"></span>
-      <span class="button" id="white"></span>
-      <span class="button" id="blue"></span>
-      <span class="button" id="yellow"></span>
+      <span class="button" id="grey">grey</span>
+      <span class="button" id="white">white</span>
+      <span class="button" id="blue">blue</span>
+      <span class="button" id="yellow">yellow</span>
       <h2>
         Try clicking on one of the colors above
         <span>to change the background color of this page!</span>
       </h2>
     </div>
-    <script></script>
+    <script src="script.js"></script>
   </body>
 </html>
