--- a/DOM projects/project 3/index.html
+++ b/DOM projects/project 3/index.html
@@ -6,6 +6,10 @@
     <title>Project 3</title>
   </head>
   <body>
+    <div class="center">
+      <div id="banner"><span>Your local time</span></div>
+      <div id="clock"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
